# RemoteMonitor

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc  server.crt
src/client/: AddMachine.cpp  AddMachine.h  KillProcess.cpp  KillProcess.h  MachineFrame.cpp  MachineFrame.h  MachineFrame.ui  ProcessFrame.cpp  ProcessFrame.h  addmachine.ui  client.cpp  client.h  client.ui  killprocess.ui  main.cpp  processframe.ui
src/server/: Server.cpp  Server.h  Thread.cpp  Thread.h  main.cpp
